syntax = "proto3";

import "user.proto";

package pb;

option go_package = "github.com/RoyceAzure/go-stockinfo-broker/api/pb";

message UpdateUserRequest{
    int64 user_id = 1;
    optional string user_name = 2;
    optional string password = 3;
    optional string sso_identifer = 4;
}

message UpdateUserResponse{
    User user=1;
}